--- a/lib/brogress_web/components/layouts/root.html.heex
+++ b/lib/brogress_web/components/layouts/root.html.heex
@@ -11,16 +11,16 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-white">
+  <body class="bg-bg">
     <ul class="relative z-10 flex items-center gap-4 px-4 sm:px-6 lg:px-8 justify-end">
       <%= if @current_user do %>
-        <li class="text-[0.8125rem] leading-6 text-zinc-900">
+        <li class="text-[0.8125rem] leading-6 text-metal">
           {@current_user.email}
         </li>
         <li>
           <.link
             href={~p"/users/settings"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            class="text-[0.8125rem] leading-6 text-metal font-semibold hover:text-gray-700"
           >
             Settings
           </.link>
@@ -29,7 +29,7 @@
           <.link
             href={~p"/users/log_out"}
             method="delete"
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            class="text-[0.8125rem] leading-6 text-metal font-semibold hover:text-gray-700"
           >
             Log out
           </.link>
@@ -37,16 +37,16 @@
       <% else %>
         <li>
           <.link
-            href={~p"/users/register"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            href={~p"/users/register"}  
+            class="text-[0.8125rem] leading-6 text-metal font-semibold hover:text-gray-700"
           >
             Register
           </.link>
         </li>
         <li>
           <.link
-            href={~p"/users/log_in"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+            href={~p"/users/log_in"}            
+            class="text-[0.8125rem] leading-6 text-metal font-semibold hover:text-gray-700"
           >
             Log in
           </.link>
